Bug 574859 - Bring up the system menu when right clicking on titlebar glass. r=vlad, a=final.